--- a/README
+++ b/README
@@ -20,6 +20,8 @@ See the examples directory for runable lisp code and tal templates.
    events we buffered when processing the template
 
 == Changes From Arnesi / UCW tal ==
+ * Available without loading arnesi, yaclml, or ucw
+
  * A single environment (tal environment is used only to pass values as 
    parameters); TAL processing occurs in the standard common lisp runtime.
    TAL package determines what is currently available.
